--- a/vignettes/IPA.html
+++ b/vignettes/IPA.html
@@ -645,7 +645,7 @@ model and IPA of the model where the variable is omitted.
 </div>
 
 <pre class="example">
-    Variable     Brier        IPA        IPA.loss
+    Variable     Brier        IPA        IPA.drop
 1 Null model 0.1523438 0.00000000  0.072907470973
 2 Full model 0.1412368 0.07290747  0.000000000000
 3        age 0.1410426 0.07418209 -0.001274618360
@@ -964,7 +964,7 @@ model and IPA of the model where the variable is omitted.
 </div>
 
 <pre class="example">
-    Variable times     Brier       IPA      IPA.loss
+    Variable times     Brier       IPA      IPA.drop
 1 Null model     3 0.2395320 0.0000000  0.1708698205
 2 Full model     3 0.1986032 0.1708698  0.0000000000
 3        age     3 0.1972558 0.1764950 -0.0056252214
@@ -1203,7 +1203,7 @@ IPA of the model where the variable is omitted.
 </div>
 
 <pre class="example">
-    Variable times     Brier        IPA     IPA.loss
+    Variable times     Brier        IPA     IPA.drop
 1 Null model     3 0.2445718 0.00000000  0.175254870
 2 Full model     3 0.2017094 0.17525487  0.000000000
 3        age     3 0.2005925 0.17982131 -0.004566441
